# meeting-intelligence

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.streamlit  Makefile  README.md  REVIEWER-GUIDE.md  docker-compose.yml  pyproject.toml  vercel.json
.issues/: 2026-02-18.1.issue.closed.md  2026-02-18.10.pr.merged.md  2026-02-18.11.pr.merged.md  2026-02-18.12.pr.merged.md  2026-02-18.13.pr.merged.md  2026-02-18.14.pr.merged.md  2026-02-18.15.pr.merged.md  2026-02-18.16.pr.merged.md  2026-02-18.17.pr.merged.md  2026-02-18.18.pr.merged.md  2026-02-18.19.pr.merged.md  2026-02-18.2.issue.closed.md  2026-02-18.20.issue.open.md  2026-02-18.21.issue.open.md  2026-02-18.22.issue.closed.md  2026-02-18.22.issue.open.md  2026-02-18.23.issue.closed.md  2026-02-18.23.issue.open.md  2026-02-18.24.issue.closed.md  2026-02-18.24.issue.open.md  2026-02-18.25.issue.closed.md  2026-02-18.25.issue.open.md  2026-02-18.26.issue.closed.md  2026-02-18.26.issue.open.md  2026-02-18.3.issue.closed.md  2026-02-18.4.issue.closed.md  2026-02-18.5.issue.closed.md  2026-02-18.6.issue.closed.md  2026-02-18.7.issue.closed.md  2026-02-18.8.issue.closed.md  2026-02-18.9.issue.closed.md  2026-02-19.27.pr.merged.md  2026-02-19.27.pr.open.md  2026-02-19.28.pr.merged.md  2026-02-19.29.pr.closed.md  2026-02-19.30.issue.closed.md  2026-02-19.30.issue.open.md  2026-02-20.31.issue.closed.md  2026-02-20.31.issue.open.md  2026-02-20.32.issue.closed.md  (+61 more)
docs/: PRD.md  architecture.md  engineering-philosophy.md  feedback-session-2026-02-21.md  how-it-works.md  manual-testing-guide.md  nextjs-dev-mode-windows.md  understanding-the-system.md  work_log.md
frontend/: .env.example  middleware.ts  package-lock.json  package.json  playwright.config.ts
scripts/: download_meetingbank.py  load_meetingbank.py  start-api.sh
src/: config.py  pipeline_config.py
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_contextual_retrieval.py  test_evaluation.py  test_extraction.py  test_health.py  test_image_summary.py  test_ingestion.py  (+3 more)
(+100 files in other folders)
